# SoundLink

./: .gitignore  LICENSE  README.md  SoundLink.slnx
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
android/app/src/main/java/com/soundlink/: MainActivity.kt  SoundLinkApp.kt
android/app/src/main/java/com/soundlink/audio/: AudioPlaybackService.kt  JitterBuffer.kt  OpusDecoderJni.kt
android/app/src/main/java/com/soundlink/discovery/: NsdDiscoveryService.kt
android/app/src/main/java/com/soundlink/network/: ControlClient.kt  StreamReceiver.kt
android/app/src/main/java/com/soundlink/service/: AudioStreamService.kt
android/app/src/main/java/com/soundlink/ui/components/: SoundLinkBackdrop.kt
android/app/src/main/java/com/soundlink/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
src/SoundLink.Core/: SoundLink.Core.csproj  SoundLinkServer.cs
src/SoundLink.Core/Audio/: AudioCaptureService.cs  OpusEncoderService.cs
src/SoundLink.Core/Discovery/: MdnsAdvertiser.cs
src/SoundLink.Core/Network/: AudioPacket.cs  ControlProtocol.cs  NetworkServer.cs
src/SoundLink.Core/Security/: TlsCertificateManager.cs
src/SoundLink.Core/Usb/: AdbService.cs
src/SoundLink.Desktop/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SoundLink.Desktop.csproj
src/SoundLink.Desktop/Properties/PublishProfiles/: WindowsLite.pubxml
src/SoundLink.Desktop/ViewModels/: MainViewModel.cs
(+3 files in other folders)
